@@ -31,6 +31,11 @@ Additions
 
 - Updated DocsSample with more folder support
 
+- Fetcher logging now uses xmllint to prettyprint XML for better readability
+  in Safari
+  
+- Added setNamespaces: to GDataXMLNode
+
 Bugs Fixed
 
 - Fixed finance portfolio description method (thanks dujunfly)
